--- a/mysite/textfiles/templates/textfiles/file_detail.html
+++ b/mysite/textfiles/templates/textfiles/file_detail.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <title>{{ file.title }}</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     {% comment %} <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> {% endcomment %}
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'textfiles/style_file_view.css' %}">
 </head>
 <body>
     <h1>Раздел: {{ file.title }}</h1>
@@ -28,7 +30,7 @@
         
         
     
-    <a href="{% url 'home_view' %}">На главную</a>
+    <a href="{% url 'home_view' %}"><button  class="custom-button">На главную</button></a>
 
 
     
