Добавлена иконка сайта

--- a/mysite/textfiles/templates/textfiles/file_detail.html
+++ b/mysite/textfiles/templates/textfiles/file_detail.html
@@ -7,6 +7,7 @@
     {% comment %} <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> {% endcomment %}
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'textfiles/style_file_view.css' %}">
+    <link rel="icon" type="image/png" href="/media/image/icon.png">
 </head>
 <body>
     <h1>Раздел: {{ file.title }}</h1>
