--- a/mysite/textfiles/templates/textfiles/home.html
+++ b/mysite/textfiles/templates/textfiles/home.html
@@ -4,7 +4,7 @@
     {% load static %}
     <title>Список файлов</title>
     <link rel="stylesheet" type="text/css" href="{% static 'textfiles/styles.css' %}">
-
+    <link rel="icon" type="image/png" href="/media/image/icon.png">
 </head>
 <body>
     <h1>Список файлов</h1>
