--- a/mysite/static/textfiles/style_file_view.css
+++ b/mysite/static/textfiles/style_file_view.css
@@ -4,16 +4,20 @@
     /* background: linear-gradient(to right, #ff7e5f, #feb47b); /* Градиентный фон */
     /* margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center;
     align-items: center;
-    height: 100vh; */ 
+    height: 100vh;  */
 } 
 
-/* .container {
+.container {
     text-align: center;
-} */
-
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 /* Стили для кнопок */
 .custom-button {
     font-size: 18px; /* Увеличенный размер текста */
