Добавлено разделение на группы файлов

--- a/mysite/textfiles/templates/textfiles/file_detail.html
+++ b/mysite/textfiles/templates/textfiles/file_detail.html
@@ -44,7 +44,7 @@
         
         
     
-    <a href="{% url 'home_view' %}"><button  class="custom-button">На главную</button></a>
+    <a href="{% url 'file_list' group.id %}"><button  class="custom-button">На главную</button></a>
 
 
     
